tests/fail/semantic/product_enzyme_with_field.cyt
enzyme Test[] -> nothing

enzyme UsesEnzymeWithField[] -> Test(x: 12)

// args: --no-colour

// expected stderr:
// error: enzyme type `Test` does not have fields
//   ┌─ ../tests/fail/semantic/product_enzyme_with_field.cyt:3:33
//   │
// 3 │ enzyme UsesEnzymeWithField[] -> Test(x: 12)
//   │                                 ^^^^^^^^^^^ enzymes do not have fields
//   │
//   = try using `Test` without any fields